created the ordered service methods

--- a/commons-module/src/main/resources/message.properties
+++ b/commons-module/src/main/resources/message.properties
@@ -1,3 +1,5 @@
 product.exists=This product already exists
 invalid.price=The price of product must be greater than zero
 product.does.not.exists=This product does not exists
+order.not.found=Order not found
+invalid.quantity=Quantity of order is higher than the available quantity
