--- a/commons-module/src/main/resources/message.properties
+++ b/commons-module/src/main/resources/message.properties
@@ -3,3 +3,5 @@ invalid.price=The price of product must be greater than zero
 product.does.not.exists=This product does not exists
 order.not.found=Order not found
 invalid.quantity=Quantity of order is higher than the available quantity
+invalid.order=Can not create Report Order
+request.successful=Successful
